# src/Routes/user.ts
@@ -3,6 +3,7 @@ import user from "../Controllers/user";
 import admin from "../Controllers/Admin/admin";
 import verify from "../middlewares/verify_Token"
 import isAdmin from "../middlewares/verify_admin";
+import verifyToken from "../middlewares/verify_Token";
 const router = Router();
 
 
@@ -14,6 +15,6 @@ router.route("/update").patch([verify],user.updateUser);
 router.route("/delete/:user_id").delete(user.deleteUser);
 router.route("/accept/:user_id").patch([verify, isAdmin], admin.accept_professional);
 router.route("/updateUserCategory").patch([verify], user.updateUserCategory);
-
+router.route("/getUser").get([verify], user.getUser);
 
 export default router;
